# Bastion

./: .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.es.md  README.md
.cargo/: config.toml
crates/bastion-application/: Cargo.toml
crates/bastion-application/src/: lib.rs
crates/bastion-application/src/catalog/: evaluate_assertion.rs  mod.rs  record_experience.rs  run_doctor.rs  suggest_advice.rs
crates/bastion-application/src/execution/: mod.rs  run_command.rs  run_command_stream.rs
crates/bastion-application/src/file_ops/: list_files.rs  mod.rs  read_file.rs  write_file.rs
crates/bastion-application/src/sandbox/: create.rs  info.rs  list.rs  mod.rs  terminate.rs
crates/bastion-application/src/template/: materialization_resolver.rs  mod.rs
crates/bastion-bootstrap/: Cargo.toml
crates/bastion-bootstrap/src/: main.rs
crates/bastion-dashboard/: Cargo.toml  Trunk.toml  index.html
crates/bastion-dashboard/src/: error.rs  lib.rs
crates/bastion-dashboard/src/api/: client.rs  events.rs  mod.rs  types.rs
crates/bastion-dashboard/src/project/: config.rs  manager.rs  mod.rs  types.rs
crates/bastion-dashboard/src/server/: app.rs  mod.rs  router.rs  state.rs
crates/bastion-dashboard/src/server/handlers/: events.rs  metrics.rs  mod.rs  pipelines.rs  projects.rs  sandboxes.rs
crates/bastion-dashboard/src/ui/: app.rs  mod.rs
crates/bastion-dashboard/src/ui/components/: metric_card.rs  mod.rs  nav.rs  project_card.rs  sandbox_card.rs
crates/bastion-domain/: Cargo.toml
crates/bastion-domain/config/: rules.json
crates/bastion-domain/src/: lib.rs  secret.rs
crates/bastion-domain/src/catalog/: advice.rs  assertion.rs  doctor.rs  experience.rs  mod.rs
crates/bastion-domain/src/execution/: command.rs  mod.rs  stream.rs
crates/bastion-domain/src/file_ops/: entry.rs  mod.rs
crates/bastion-domain/src/orientation/: config_history.rs  mod.rs  template_recommender.rs
crates/bastion-domain/src/project/: aggregate.rs  mod.rs  types.rs
crates/bastion-domain/src/provider/: artifact_location.rs  binary_ref.rs  capabilities.rs  compat.rs  executor.rs  image_reference.rs  image_source.rs  instance.rs  instance_config.rs  instance_constraints.rs  instance_repository.rs  lifecycle.rs  location.rs  mod.rs  mount_ref.rs  network.rs  port.rs  provider_type.rs  rootfs.rs  router.rs  secret_source.rs  socket_ref.rs  state_machine.rs  type_registry.rs  volume_source.rs  worker_binary_source.rs
crates/bastion-domain/src/sandbox/: entity.rs  events.rs  mod.rs  repository.rs  snapshot.rs  state_manager.rs  value_objects.rs
crates/bastion-domain/src/shared/: brn.rs  error.rs  id.rs  mod.rs
crates/bastion-domain/src/template/: artifact.rs  catalog.rs  layer.rs  materializer.rs  mod.rs  store.rs  toolchain.rs
crates/bastion-gateway/: Cargo.toml  build.rs
crates/bastion-gateway/src/: advice_tools.rs  auth.rs  auto_tls.rs  catalog_tools.rs  doctor_tools.rs  enrichment_tools.rs  main.rs  metrics_tools.rs  metrics_tools_types.rs  orientation_tools.rs  orientation_tools_types.rs  pipeline_events.rs  registry.rs  sandbox.rs  sandbox_tools.rs  sandbox_tools_helpers.rs  sandbox_tools_types.rs  server.rs  tls.rs
crates/bastion-gateway/tests/: e2e_podman_test.rs  e2e_test.rs  edge_case_test.rs  enrichment_e2e.rs  http_transport_test.rs  orientation_e2e.rs  streaming_test.rs
crates/bastion-infrastructure/: Cargo.toml  build.rs
crates/bastion-infrastructure/src/: lib.rs  sandbox.rs
crates/bastion-infrastructure/src/catalog/: mod.rs  sqlite_experience_store.rs  toml_advice_parser.rs  toml_assertion_parser.rs  toml_doctor_parser.rs
crates/bastion-infrastructure/src/config/: embedded_defaults.rs  loader.rs  mod.rs
crates/bastion-infrastructure/src/doctor/: mod.rs
crates/bastion-infrastructure/src/enrichment/: adapter.rs  config.rs  fs.rs  mod.rs  schema_migration.rs  sqlite_optimizer_repo.rs  sqlite_recorder.rs  sqlite_repo.rs  sqlite_worker.rs
crates/bastion-infrastructure/src/evaluation/: legacy_cel_shim.rs  mod.rs
crates/bastion-infrastructure/src/grpc/: client.rs  mod.rs
crates/bastion-infrastructure/src/metrics/: heartbeat_bridge.rs  hub.rs  mod.rs
crates/bastion-infrastructure/src/persistence/: in_memory.rs  mod.rs  sqlite_repository.rs
crates/bastion-infrastructure/src/pool/: manager.rs  mod.rs
crates/bastion-infrastructure/src/provider/: config.rs  docker.rs  factory.rs  firecracker.rs  gvisor.rs  local.rs  mod.rs  podman.rs  registry.rs  rootfs_manager.rs  state_machine.rs  toml_repository.rs  wasm.rs
crates/bastion-infrastructure/src/secret/: env_resolver.rs  mod.rs  noop_resolver.rs
crates/bastion-infrastructure/src/template/: ca_store.rs  capability_config.rs  capability_registry.rs  layer.rs  mod.rs  podman.rs  snapshot.rs  snapshot_ops.rs  store.rs  universal.rs
crates/bastion-infrastructure/tests/: e2e_worker_v2.rs  firecracker_lifecycle.rs  firecracker_test.rs  gvisor_lifecycle.rs  gvisor_test.rs  layer_materializer_test.rs  podman_lifecycle.rs  podman_optimized_test.rs  podman_provider_test.rs  pool_test.rs  registry_tests.rs  self_test.rs  snapshot_test.rs  template_materializer_test.rs
crates/bastion-test-harness/: Cargo.toml
crates/bastion-test-harness/src/: lib.rs  metrics.rs  metrics_test.rs  schema.rs  terminal.rs  types.rs
crates/bastion-worker/: Cargo.toml  build.rs
crates/bastion-worker/src/: main.rs  sandbox.rs  worker.rs
crates/bastion-worker/tests/: protocol_test.rs
crates/enrichment-engine/: Cargo.toml
crates/enrichment-engine/src/: composer.rs  intent.rs  lib.rs  metrics.rs  normalizer.rs  optimizer.rs  pipeline.rs  sanitizer.rs  truncate.rs
crates/enrichment-engine/src/enrichers/: maven.rs  maven.yaml  mod.rs
crates/enrichment-engine/src/extractors/: command_extractor.rs  glob_extractor.rs  mod.rs  regex_extractor.rs  static_extractor.rs
crates/enrichment-engine/src/models/: enricher.rs  mod.rs  rule.rs  run_record.rs  utility_metrics.rs
crates/enrichment-engine/src/rules/: ast.rs  evaluator.rs  lexer.rs  mod.rs
crates/enrichment-engine/src/traits/: mod.rs
(+100 files in other folders)
