[workspace]
resolver = "2"
members = [
    "crates/bastion-domain",
    "crates/bastion-application",
    "crates/bastion-infrastructure",
    "crates/bastion-gateway",
    "crates/bastion-worker",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/bastion-rs/bastion"
rust-version = "1.85"
description = "MCP Gateway for AI agent sandbox orchestration"

[workspace.dependencies]
# ── Internal crates ──────────────────────────────────────────
bastion-domain = { path = "crates/bastion-domain" }
bastion-application = { path = "crates/bastion-application" }
bastion-infrastructure = { path = "crates/bastion-infrastructure" }

# ── Async runtime ────────────────────────────────────────────
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "process", "fs"] }
async-trait = "0.1.89"
futures = "0.3.32"
tokio-stream = "0.1.18"

# ── Serialization ────────────────────────────────────────────
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ── Error handling ───────────────────────────────────────────
thiserror = "2.0"
anyhow = "1.0"

# ── Time & IDs ───────────────────────────────────────────────
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23", features = ["v4", "serde"] }

# ── Logging & Tracing ────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ── gRPC ─────────────────────────────────────────────────────
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"

# ── MCP (Model Context Protocol) ─────────────────────────────
rmcp = { version = "1.5", features = ["server", "macros", "schemars", "transport-io"] }

# ── Schema ───────────────────────────────────────────────────
schemars = "1.2"

# ── CLI ──────────────────────────────────────────────────────
clap = { version = "4.6", features = ["derive"] }

# ── Config ───────────────────────────────────────────────────
toml = "1.1"

# ── Container APIs ───────────────────────────────────────────
bollard = "0.20"
base64 = "0.22"
