[workspace]
resolver = "2"
members = [
    "crates/bastion-domain",
    "crates/bastion-application",
    "crates/bastion-infrastructure",
    "crates/bastion-gateway",
    "crates/bastion-worker",
    "crates/bastion-bootstrap",
    "crates/enrichment-engine",
    "crates/bastion-test-harness",
    "crates/bastion-dashboard",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/bastion-rs/bastion"
rust-version = "1.85"
description = "MCP Gateway for AI agent sandbox orchestration"

[workspace.dependencies]
# ── Internal crates ──────────────────────────────────────────
bastion-domain = { path = "crates/bastion-domain" }
bastion-application = { path = "crates/bastion-application" }
bastion-infrastructure = { path = "crates/bastion-infrastructure" }
bastion-test-harness = { path = "crates/bastion-test-harness" }
enrichment-engine = { path = "crates/enrichment-engine" }
bastion-dashboard = { path = "crates/bastion-dashboard" }

# ── Async runtime ────────────────────────────────────────────
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "process", "fs"] }
async-trait = "0.1.89"
futures = "0.3.32"
tokio-stream = "0.1.18"

# ── Serialization ────────────────────────────────────────────
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ── Error handling ───────────────────────────────────────────
thiserror = "2.0"
anyhow = "1.0"

# ── Time & IDs ───────────────────────────────────────────────
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23", features = ["v4", "serde"] }

# ── Logging & Tracing ────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ── gRPC ─────────────────────────────────────────────────────
tonic = { version = "0.14", features = ["tls-ring", "gzip"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"

# ── MCP (Model Context Protocol) ─────────────────────────────
rmcp = { version = "1.5", features = [
    "server", "client", "macros", "schemars", "transport-io",
    "transport-streamable-http-server",
    "transport-streamable-http-client"
] }

# ── Schema ───────────────────────────────────────────────────
schemars = "1.2"

# ── CLI ──────────────────────────────────────────────────────
clap = { version = "4.6", features = ["derive"] }

# ── Config ───────────────────────────────────────────────────
toml = "1.1"

# ── Container APIs ───────────────────────────────────────────
bollard = "0.20"
base64 = "0.22"

# ── Security ─────────────────────────────────────────────────
hmac = "0.12"
sha2 = "0.10"

# ── TLS ──────────────────────────────────────────────────────
tokio-rustls = "0.26"
rustls-pemfile = "2.0"
