[package]
name = "bastion-bootstrap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bastion-bootstrap"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.52", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
sha2 = "0.10"

[profile.release]
strip = true
lto = true
opt-level = "z"
