[package]
name = "bastion-dashboard"
description = "Dashboard library for Bastion sandbox gateway - project management and REST API client"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["csr"]
csr = []

[dependencies]
bastion-domain = { workspace = true }

# Leptos WASM UI - CSR mode (client-side rendering)
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
leptos_meta = "0.7"

# WASM utilities
web-sys = { version = "0.3", features = ["EventSource", "MessageEvent", "Event", "Window", "Document", "HtmlElement", "Element", "Request", "RequestInit", "Response"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"

# Logging for WASM
console_log = "1"
log = "0.4"

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time & IDs
chrono = { workspace = true }
uuid = { workspace = true }

# Logging
tracing = { workspace = true }

# HTTP client
reqwest = { version = "0.13", features = ["json", "rustls-tls"], default-features = false }

# HTTP server
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
mockall = "0.13"
