[package]
name = "bastion-gateway"
description = "MCP Gateway server for Bastion sandbox platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "bastion-gateway"
path = "src/main.rs"

[dependencies]
bastion-domain = { workspace = true }
bastion-application = { workspace = true }
bastion-infrastructure = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
dashmap = "6.1"
async-trait = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
rand = "0.8"
