[package]
name = "bastion-gateway"
description = "MCP Gateway server for Bastion sandbox platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
test-metrics = ["bastion-test-harness/test-metrics"]
dashboard = ["bastion-dashboard", "opener"]

[[bin]]
name = "bastion-gateway"
path = "src/main.rs"

[dependencies]
bastion-domain = { workspace = true }
bastion-application = { workspace = true }
bastion-infrastructure = { workspace = true }
enrichment-engine = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
dashmap = "6.1"
async-trait = { workspace = true }
chrono = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
rcgen = { version = "0.13", features = ["pem", "x509-parser"] }
jsonwebtoken = "9"
dirs = "6"
time = "0.3"
hex = "0.4"
base64 = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }
rand = "0.8"

# ── HTTP transport ─────────────────────────────────────────────
hyper = { version = "1", features = ["http1"] }
hyper-util = { version = "0.1", features = ["tokio", "client", "server-auto"] }
tower-service = "0.3"
http = "1"
http-body = "1"
http-body-util = "0.1"

# ── Dashboard feature ─────────────────────────────────────────
opener = { version = "0.7", optional = true }
bastion-dashboard = { path = "../bastion-dashboard", optional = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
reqwest = { version = "0.13", features = ["json", "blocking", "cookies"] }
tempfile = "3"
bastion-test-harness = { path = "../bastion-test-harness", features = ["test-metrics"] }
once_cell = "1"
