[package]
name = "bastion-infrastructure"
description = "Infrastructure adapters for Bastion sandbox gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["use-segregated-traits"]
file-watcher = ["notify"]
wasm-sandbox = ["dep:wasmtime", "dep:wasmtime-wasi"]
use-segregated-traits = ["bastion-domain/use-segregated-traits"]
test-metrics = ["bastion-test-harness/test-metrics"]

[dependencies]
bastion-domain = { workspace = true }
enrichment-engine = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
toml = { workspace = true }
serde_yaml = "0.9"
regex = "1"
bollard = { workspace = true }
podman-api = "0.11"
base64 = { workspace = true }
dashmap = "6.1"
tar = "0.4"
zip = "2"
bytes = "1"
rusqlite = { version = "0.35", features = ["bundled"] }
sha2 = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"

# File watcher for hot-reload (optional)
notify = { version = "8", optional = true }

# WASM sandbox provider (optional)
wasmtime = { version = "29", optional = true }
wasmtime-wasi = { version = "29", optional = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
tempfile = "3"
bastion-test-harness = { workspace = true, features = ["test-metrics"] }
