[package]
name = "bastion-worker"
description = "Sandbox worker that runs inside isolated environments, serving gRPC"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "bastion-worker"
path = "src/main.rs"

[dependencies]
bastion-domain = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
clap = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
dashmap = "6.1"
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }
rand = "0.8"

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
