[package]
name = "enrichment-engine"
description = "Host-agnostic enrichment engine: models, traits, extractors, and FactPipeline"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1"
glob = "0.3"
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
